<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".RivierahalTimeActivity">

    <Button
        android:id="@+id/buttonRivierahalTime1"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:background="@color/colorOrange"
        android:onClick="startRivierahalActivity2"
        android:text="@string/route"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRivierahalTime2"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:background="@color/colorOrange"
        android:onClick="startRivierahalActivity"
        android:text="@string/route"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/description_times"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/time_one"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonRivierahalTime2"
        app:layout_constraintStart_toStartOf="@+id/buttonRivierahalTime2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/time_two"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonRivierahalTime1"
        app:layout_constraintStart_toStartOf="@+id/buttonRivierahalTime1" />

    <Button
        android:id="@+id/buttonBackMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="startMainActivity"
        android:background="@color/colorWhite"
        android:text="@string/terug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>