<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/welkom"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:text="@string/locatie"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOceaniumTimes"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginBottom="168dp"
        android:layout_marginEnd="113dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="113dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorOrange"
        android:onClick="startOceaniumTimeActivity"
        android:text="@string/oceanium"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonRivierhalTimes"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRivierhalTimes"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="@color/colorOrange"
        android:textColor="@color/colorWhite"
        android:onClick="startRivierahalTimeActivity"
        android:text="@string/rivierahal"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOceaniumTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOceaniumTimes"
        app:layout_constraintTop_toTopOf="@+id/buttonOceaniumTimes" />


</android.support.constraint.ConstraintLayout>